--- a/Css/style-flipside.css
+++ b/Css/style-flipside.css
@@ -283,7 +283,7 @@ footer button:hover {transform: scale(1.04);}
         max-width: 100%;
         min-width: 300px;
         min-height:440px;
-        background-image: url("../Drizzle/1.jpg");
+        background-image: url(".../Flipside/1.png");
         background-position: center;
         background-size: contain;
         background-repeat: no-repeat;
