--- a/Css/style-flipside.css
+++ b/Css/style-flipside.css
@@ -5,6 +5,7 @@
 html {
     box-sizing: border-box;
     scroll-behavior: smooth;
+    animation-timing-function: ease-in-out;
 } 
 body {
     position:relative;
